Use G1GC to try and fix GC overhead limit error